# WBC-Classification

./: .gitignore  LICENSE  README.md  Train.py  WBC-Detection.py  learning.py  learning_v2.py  load_test_model.py  pyproject.toml  requirements.txt  test_model.py
CNN/: README.md  learning.py  load_test_model.py
CNN/datasets/: DatasetLoader.py  simpledatasetloader.py
CNN/nn/conv/: IncludeNet.py  shallownet.py
CNN/preprocessing/: ImageToArray.py  PreProcessor.py  imagetoarraypreprocessor.py  simplepreprocessor.py
Model/: IncludeNet.py
PrePorcessor/: Preprocessor.py
SavedModel/: 150_epoch_model.hdf5
TrainedModel/: model_epoch_100.hdf5  model_epoch_120.hdf5  model_epoch_120.keras
WBC-Detection/: README.md  WBC-Detection.py
dataset/: SimpleDatasetLoader.py
docs/: index.md
